--- a/apppage.html
+++ b/apppage.html
@@ -2,18 +2,15 @@
   <nav>
    <li> <a href= "index.html" >HOME </a></li>
    <li> <a href= "apppage.html >APPS </a></li>
-    </nav>
-<br> <h2> My apps from AP CSP
-</h2>
+</nav>
+<br> 
+<br>
+<h1> My apps from AP CSP
+</h1>
     <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/xL2NZ1lUyxoQh5J2NqhQw4-z2JlILAy-U7XBdioZHQO/embed?nosource"></iframe>
 
     <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/VEz-NBsoEr0aA9jwLgvIBvGXJrnrX6Be2uHkhDc-7Ox/embed?nosource"></iframe>
   <style>
-
-
-    <br>
-    <br>
-
 
   </body>
       <head>
